[package]
name = "dma-buf"
version = "0.3.1"
authors = ["Maxime Ripard <maxime@cerno.tech>"]
edition = "2021"
description = "Linux DMA-Buf Abstraction Library"
readme = "README.md"
license-file = "LICENSE"
keywords = ["linux", "dma", "dma-buf"]
categories = ["api-bindings", "os::linux-apis"]
repository = "https://github.com/mripard/dma-buf/"

[dependencies]
log = "0.4.20"
rustix = { version = "0.38.31", features = ["fs", "mm", "param"] }
thiserror = "1.0.56"
